--- a/src/app/createcompte/createcompte.component.html
+++ b/src/app/createcompte/createcompte.component.html
@@ -1,4 +1,4 @@
-<div style="margin-top: 6rem;">
+<div style="margin-top: 3rem;">
   <ul class="nav nav-tabs" style="margin-left: 50%;">
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="#">Register</a>
@@ -7,9 +7,9 @@
     </ul>
 </div>
 
-<div style="width:65%; display: flex; margin:1rem auto;">
+<div style=" display: flex; margin:1rem auto;">
   <div>
-      <img style="width: 90%;" src="./assets/img/illustration.png" alt="banner">
+      <img src="./assets/img/8412596aa3b65fd3da967dea744da451-removebg-preview.png" alt="banner">
   </div>
   <div>
     <div class="card-header" style="width: 30rem; display:flex; justify-content: space-between; border:1px solid lightgray">
