--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 
-<div style="margin-top: 6.5rem;">
+<div style="margin-top: 3rem;">
   <ul class="nav nav-tabs" style="margin-left: 50%;">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="#">Login</a>
@@ -8,9 +8,9 @@
   </ul>
 </div>
 
-<div style="width:60%;display: flex; margin:3rem auto;">
+<div style=" display: flex; margin:1rem auto;">
   <div>
-    <img style="width: 90%;" src="./assets/img/illustration.png" alt="filler">
+      <img src="./assets/img/8412596aa3b65fd3da967dea744da451-removebg-preview.png" alt="banner">
   </div>
   <div>
     <form (submit)="login()">
