--- a/src/app/acceuil/acceuil.component.html
+++ b/src/app/acceuil/acceuil.component.html
@@ -32,8 +32,8 @@
   <div class="card-group">
       <div class="card-mini">
         <div class="circle" style="width: 150px;">
-          <img src="./assets/img/607c49d6a8abcb6d343fe606e28251ad.jpg"  alt="" />
-          <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" style="enable-background:new -580 439 577.9 194;"
+          <img src="./assets/img/607c49d6a8abcb6d343fe606e28251ad.jpg" class="imga" alt="" />
+          <svg class="ckc" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" style="enable-background:new -580 439 577.9 194;"
              xml:space="preserve">
             <circle cx="50" cy="50" r="40" />
           </svg>
@@ -44,8 +44,8 @@
       </div>
       <div class="card-mini">
         <div class="circle" style="width: 150px;">
-          <img src="./assets/img/f9f6672a5609baf6e82d7b057f6f59fa.jpg"  alt="" />
-          <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" style="enable-background:new -580 439 577.9 194;"
+          <img src="./assets/img/f9f6672a5609baf6e82d7b057f6f59fa.jpg" class="imga"  alt="" />
+          <svg class="ckc" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" style="enable-background:new -580 439 577.9 194;"
              xml:space="preserve">
             <circle cx="50" cy="50" r="40" />
           </svg>
@@ -57,8 +57,8 @@
       </div>
       <div class="card-mini">
         <div class="circle" style="width: 150px;">
-          <img src="./assets/img/a41f0374c1acc0e5ed15b8256e36438b.jpg"  alt="" />
-          <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" style="enable-background:new -580 439 577.9 194;"
+          <img src="./assets/img/a41f0374c1acc0e5ed15b8256e36438b.jpg" class="imga"  alt="" />
+          <svg class="ckc" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" style="enable-background:new -580 439 577.9 194;"
              xml:space="preserve">
             <circle cx="50" cy="50" r="40" />
           </svg>
