service ajout patient , login done ,, prendre rendervous insertion cv aussi , acceuill , searchbar

--- a/src/app/acceuil/acceuil.component.html
+++ b/src/app/acceuil/acceuil.component.html
@@ -80,36 +80,22 @@
   </div>
 </div>
 
+
+
 <div class="records-banner" data-aos-duration="800">
-  <div>
-      <img src="./Files/record.bfc5241f9b15340a32c98eb360d1005a.svg" alt="">
+  <div class="trust-info">
+    <h1 style="color: grey;">Tous vos dossiers médicaux <br>
+      Dans une application sécurisée</h1>
+
+    <ul>
+
+        <li style="color: rgb(0, 0, 0);">&#10004;  Les enregistrements ne sont accessibles que par vous</li>
+        <li style="color: rgb(0, 0, 0);">&#10004; Accédez à vos dossiers dans plus de 400 centres</li>
+    </ul>
   </div>
-  <div>
-      <h1 style="color: grey;">All your medical records</h1>
-      <h1>In one secure app</h1>
-      <ul>
-          <li style="color: gray;">&#10004; 256 bit end-to-end encryption</li>
-          <li style="color: gray;">&#10004; Records are accessible only by you</li>
-          <li style="color: gray;">&#10004; Access your records around 8000+ centers</li>
-      </ul>
-      <button type="button" class="btn btn-info">
-              Find out more</button>
+  <div class="trust-img" style="margin-right: 10%;margin-top: 5%;">
+    <img src="./assets/img/56446a605785ae56bc1fa16980ace6d8-removebg-preview.png" alt="">
   </div>
 </div>
 
-<div class="trust-banner" data-aos-duration="800">
-  <div class="trust-info">
-      <h1 style="color: grey;">Leading healthcare provider</h1>
-      <h1>Trust us for businesses</h1>
-      <ul>
-          <li style="color: gray;">&#10004; Get seen by 25M paitients</li>
-          <li style="color: gray;">&#10004; The most advanced software for clinics and hospitals</li>
-          <li style="color: gray;">&#10004; State of art business analytics and enterprises</li>
-      </ul>
-      <button type="button" class="btn btn-info" style="margin-bottom: 4%;color: white;">
-              Learn more</button>
-  </div>
-  <div class="trust-img" style="margin-right: 10%;margin-top: 5%;">
-      <img style="width: 100%;" src="./Files/provider.c4a3d938da109434de6ce3a9046bbf42 (1).png" alt="">
-  </div>
-</div>
+
