--- a/src/app/searchbar/searchbar.component.html
+++ b/src/app/searchbar/searchbar.component.html
@@ -9,52 +9,24 @@
               <div class="row">
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                       <div class="form-group">
-                          <input type="text" class="form-control datetimepicker" placeholder="pick a date">
+                          <input type="text" class="form-control datetimepicker" [(ngModel)]="nomMedecin" placeholder="Nom du professionnel de la santé">
                       </div>
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                      <div class="form-group">
-                          <select class="form-control" id="CategoryID" name="CategoryID">
-                              <option selected="selected" value="1">All</option>
-                              <option value="2">Adventure</option>
-										<option value="3">Culture &amp; Arts</option>
-										<option value="4">Festival &amp; Events</option>
-										<option value="5">Food &amp; Drink</option>
-										<option value="6">Historical</option>
-										<option value="7">Leisure &amp; Sports</option>
-										<option value="8">Nature &amp; Rural</option>
-										<option value="9">Nightlife &amp; Party</option>
-										<option value="10">Shopping &amp; Market</option>
-										<option value="11">Transportation</option>
-										<option value="12">Business &amp; Interpretation</option>
-										<option value="13">Photography</option>
-                          </select>
-                      </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control datetimepicker" [(ngModel)]="telMedecin" placeholder="numero de cabine ">
+
+                  </div>
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                      <div class="form-group">
-                          <select class="form-control" id="LanguageID" name="LanguageID">
-                            <option selected="selected" value="1">All</option>
-                            <option value="2">Adventure</option>
-                  <option value="3">Culture &amp; Arts</option>
-                  <option value="4">Festival &amp; Events</option>
-                  <option value="5">Food &amp; Drink</option>
-                  <option value="6">Historical</option>
-                  <option value="7">Leisure &amp; Sports</option>
-                  <option value="8">Nature &amp; Rural</option>
-                  <option value="9">Nightlife &amp; Party</option>
-                  <option value="10">Shopping &amp; Market</option>
-                  <option value="11">Transportation</option>
-                  <option value="12">Business &amp; Interpretation</option>
-                  <option value="13">Photography</option>
-                          </select>
-                      </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control datetimepicker" [(ngModel)]="emailMedecin" placeholder="email du professionnel de la santé">
+                  </div>
                   </div>
                   <div class="row justify-content-center">
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                        <button class="btn btn-lg btn-kootour-bold btn-search" type="submit">
-                            Search
-                        </button>
+                      <button class="btn btn-lg btn-kootour-bold btn-search" (click)="searchMedecin()">
+                        Rechercher </button>
                     </div>
                 </div>
               </div>
