--- a/src/app/acceuil/acceuil.component.css
+++ b/src/app/acceuil/acceuil.component.css
@@ -294,3 +294,33 @@ margin-top: 3%;
       stroke-dasharray: 8;
     }
   }
+  .land-sections{
+    /* border:1px solid black; */
+    width:77%;
+    margin: 4.5rem auto;
+}
+#feature-cont{
+  /* border:1px solid red; */
+  display:grid;
+  grid-template-columns: repeat(5,1fr);
+  gap: 3rem;
+}
+
+.feature-card{
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  border-radius: 10px;
+  transition: transform .2s;
+}
+.feature-card:hover{
+  transform: scale(1.1);
+  cursor:pointer;
+}
+.feature-img{
+  width:100%;
+  /* border:1px solid black; */
+}
+.feature-img>img{
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  width:100%;
+}
