--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,31 @@
-<nav class="navbar navbar-expand-custom navbar-mainbg" >
-
+<nav class="navbar navbar-expand-custom navbar-mainbg">
+  <a class="navbar-brand navbar-logo" href="#">&nbsp;<img src="/assets/img/logo_white-removebg-preview.png" width="30px" height="30px"></a>
+  <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <i class="fas fa-bars text-white"></i>
+  </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent" >
-      <ul class="navbar-nav ml-auto" style="margin-left: 1000px;">
+      <ul class="navbar-nav ml-auto">
           <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
-          <li class="nav-item" >
-              <a class="nav-link" href="javascript:void(0);"></a>
-          </li>
-
+          <li class="nav-item ">
+            <a class="nav-link" href="javascript:void(0);"></a>
+        </li>
           <li class="nav-item active">
-              <a class="nav-link" href="javascript:void(0);" routerLink="connect">Se connecter</a>
+              <a class="nav-link" href="javascript:void(0);" routerLink="acc"><i class="fas fa-first-aid"></i> Acceuil</a>
+          </li>
+          <li class="nav-item ">
+              <a class="nav-link" href="javascript:void(0);" routerLink="listemedecin"><i class="far fa-address-book"></i> Prendre un rendez-vous  </a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="javascript:void(0);"><i class="far fa-clone"></i>Components</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="javascript:void(0);"><i class="far fa-calendar-alt"></i>Calendar</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Charts</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="javascript:void(0);" routerLink="connect"><i class="far fa-address-book"></i>Se connecter</a>
           </li>
       </ul>
   </div>
