--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<header></header>
+<app-navbar [buttonText]="getButtonText()" ></app-navbar>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
