--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,8 +25,15 @@
               <a class="nav-link" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Charts</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0);" routerLink="connect"><i class="far fa-address-book"></i>Se connecter</a>
-          </li>
+            <a *ngIf="!isLoggedIn" class="nav-link" href="javascript:void(0);" routerLink="profile">
+                <i class="far fa-user"></i> Mon compte
+            </a>
+            <a *ngIf="isLoggedIn" class="nav-link" href="javascript:void(0);" routerLink="login">
+                <i class="far fa-address-book"></i> Se connecter
+            </a>
+        </li>
+
+
       </ul>
   </div>
 </nav>
