--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,10 +25,10 @@
               <a class="nav-link" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Charts</a>
           </li>
           <li class="nav-item">
-            <a *ngIf="!isLoggedIn" class="nav-link" href="javascript:void(0);" routerLink="profile">
+            <a *ngIf="isLoggedIn" class="nav-link" href="javascript:void(0);" routerLink="profile">
                 <i class="far fa-user"></i> Mon compte
             </a>
-            <a *ngIf="isLoggedIn" class="nav-link" href="javascript:void(0);" routerLink="login">
+            <a *ngIf="!isLoggedIn" class="nav-link" href="javascript:void(0);" routerLink="login">
                 <i class="far fa-address-book"></i> Se connecter
             </a>
         </li>
