--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,88 +1,80 @@
 <div class="container">
   <div class="main-body" style="margin-top: 50px;">
-
-
-
-        <div class="row gutters-sm">
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <div class="card-body">
-                <div class="d-flex flex-column align-items-center text-center">
-                  <img src="./assets/img/profile.png" alt="Admin" class="rounded-circle" width="150">
-                  <div class="mt-3">
-                    <h4>nom de patient</h4>
-                  </div>
-                </div>
+    <div class="row gutters-sm">
+      <div class="col-md-4 mb-3">
+        <div class="card">
+          <div class="card-body">
+            <div class="d-flex flex-column align-items-center text-center">
+              <img src="./assets/img/profile.png" alt="Profile Picture" class="rounded-circle" width="150">
+              <div class="mt-3">
+                <h4>{{ user.nom }} {{ user.prenom }}</h4>
               </div>
             </div>
-
-          </div>
-          <div class="col-md-8">
-            <div class="card mb-3">
-              <div class="card-body">
-
-
-                <div class="row">
-                  <div class="col-sm-3">
-                    <h6 class="mb-0">Email</h6>
-                  </div>
-                  <div class="col-sm-9 text-secondary">
-                    fip@jukmuh.al
-                  </div>
-                </div>
-                <hr>
-                <div class="row">
-                  <div class="col-sm-3">
-                    <h6 class="mb-0">Numéro de téléphone</h6>
-                  </div>
-                  <div class="col-sm-9 text-secondary">
-                    (239) 816-9029
-                  </div>
-                </div>
-                <hr>
-                <div class="row">
-                  <div class="col-sm-3">
-                    <h6 class="mb-0">Date de naissance</h6>
-                  </div>
-                  <div class="col-sm-9 text-secondary">
-                    22/10/2000
-                  </div>
-                </div>
-                <hr>
-                <div class="row">
-                  <div class="col-sm-3">
-                    <h6 class="mb-0">Addresse</h6>
-                  </div>
-                  <div class="col-sm-9 text-secondary">
-                    Bay Area, San Francisco, CA
-                  </div>
-                </div>
-                <hr>
-                <div class="row">
-                  <div class="col-sm-3">
-                    <h6 class="mb-0">CIN</h6>
-                  </div>
-                  <div class="col-sm-9 text-secondary">
-                    09724208
-                  </div>
-                </div>
-                <hr>
-                <div class="row">
-                  <div class="col-sm-12">
-                    <div routerLink="updateprofile">
-                    <button class="btn btn-info " target="__blank" routerLink="updateprofile">Edit</button>
-
-                  </div></div>
-                </div>
-              </div>
-            </div>
-
- 
-
-
-
           </div>
         </div>
-
       </div>
+      <div class="col-md-8">
+        <div class="card mb-3">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-sm-3">
+                <h6 class="mb-0">Email</h6>
+              </div>
+              <div class="col-sm-9 text-secondary">
+                {{ user.adresse_email }}
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <h6 class="mb-0">Numéro de téléphone</h6>
+              </div>
+              <div class="col-sm-9 text-secondary">
+                {{ user.numero_de_telephone }}
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <h6 class="mb-0">Date de naissance</h6>
+              </div>
+              <div class="col-sm-9 text-secondary">
+                {{ user.date_de_naissance }}
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <h6 class="mb-0">Adresse</h6>
+              </div>
+              <div class="col-sm-9 text-secondary">
+                {{ user.adresse }}
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <h6 class="mb-0">CIN</h6>
+              </div>
+              <div class="col-sm-9 text-secondary">
+                {{ user.cin }}
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-12">
+                <div routerLink="updateprofile">
+                  <a class="btn btn-info" [routerLink]="['/update-profile', user.id]">Modifier</a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  <button class="btn btn-danger" (click)="logout()">Logout</button>
+                </div>
+              </div>
+
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
