ajout de deashbord

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -66,7 +66,9 @@
                           <li><a href="#">Our Services</a></li>
                           <li><a href="#">Expert Team</a></li>
                           <li><a href="#">Contact us</a></li>
-                          <li><a href="#">Latest News</a></li>
+                          <li><!-- Dans le template HTML de votre composant-->
+                            <button (click)="redirectToOtherPage()">Aller à la page sur localhost:4300</button>
+                             </li>
                       </ul>
                   </div>
               </div>
