mise a jour et ajout de admin , medecin fonction

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,116 +1,123 @@
 <footer class="footer-section">
   <div class="container">
-      <div class="footer-cta pt-5 pb-5">
-          <div class="row">
-              <div class="col-xl-4 col-md-4 mb-30">
-                  <div class="single-cta">
-                      <i class="fas fa-map-marker-alt"></i>
-                      <div class="cta-text">
-                          <h4>Trouve nous</h4>
-                          <span>Tozeur</span>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-xl-4 col-md-4 mb-30">
-                  <div class="single-cta">
-                      <i class="fas fa-phone"></i>
-                      <div class="cta-text">
-                          <h4>Appelez-nous</h4>
-                          <span>21658954023</span>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-xl-4 col-md-4 mb-30">
-                  <div class="single-cta">
-                      <i class="far fa-envelope-open"></i>
-                      <div class="cta-text">
-                          <h4>Envoyez-nous un mail</h4>
-                          <span>arijchetoui@gmail.com</span>
-                      </div>
-                  </div>
-              </div>
+    <div class="footer-cta pt-5 pb-5">
+      <div class="row">
+        <div class="col-xl-4 col-md-4 mb-30">
+          <div class="single-cta">
+            <i class="fas fa-map-marker-alt"></i>
+            <div class="cta-text">
+              <h4>Trouve nous</h4>
+              <span>Tozeur</span>
+            </div>
           </div>
+        </div>
+        <div class="col-xl-4 col-md-4 mb-30">
+          <div class="single-cta">
+            <i class="fas fa-phone"></i>
+            <div class="cta-text">
+              <h4>Appelez-nous</h4>
+              <span>21658954023</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-4 col-md-4 mb-30">
+          <div class="single-cta">
+            <i class="far fa-envelope-open"></i>
+            <div class="cta-text">
+              <h4>Envoyez-nous un mail</h4>
+              <span>arijchetoui@gmail.com</span>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="footer-content pt-5 pb-5">
-          <div class="row">
-              <div class="col-xl-4 col-lg-4 mb-50">
-                  <div class="footer-widget">
-                      <div class="footer-logo">
-                          <a href=""><img src="./assets/img/lg-removebg-preview.png" class="img-fluid" width="1700px" height="1000px" alt="logo"></a>
-                      </div>
-                      <div class="footer-text">
-                          <p>Un doute, une inquiétude, besoin d’un conseil santé ? Rendez-vouya.tn c’est la solution
+    </div>
+    <div class="footer-content pt-5 pb-5">
+      <div class="row">
+        <div class="col-xl-4 col-lg-4 mb-50">
+          <div class="footer-widget">
+            <div class="footer-logo">
+              <a href=""><img src="./assets/img/lg-removebg-preview.png" class="img-fluid" width="1700px"
+                  height="1000px" alt="logo"></a>
+            </div>
+            <div class="footer-text">
+              <div class="footer-widget-heading">
+                <h3>Pour les patients</h3>
+              </div>
+              <p>Un doute, une inquiétude, besoin d’un conseil santé ? Rendez-vouya.tn c’est la solution
 
-                            Rendez-vouya est une plateforme innovante qui vous permet de trouver rapidement un médecin le plus proche de chez vous et de prendre rendez-vous en ligne gratuitement.</p>
-                      </div>
-                      <div class="footer-social-icon">
-                          <span>Suivez-nous</span>
-                          <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
-                          <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
-                          <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
-                  <div class="footer-widget">
-                      <div class="footer-widget-heading">
-                          <h3>Liens utiles</h3>
-                      </div>
-                      <ul>
-                          <li><a  routerLink="">Home</a></li>
-                          <li><a href="#">about</a></li>
-                          <li><a href="#">services</a></li>
-                          <li><a href="#">portfolio</a></li>
-                          <li><a href="#">Contact</a></li>
-                          <li><a href="#">About us</a></li>
-                          <li><a href="#">Our Services</a></li>
-                          <li><a href="#">Expert Team</a></li>
-                          <li><a href="#">Contact us</a></li>
-                          <li><!-- Dans le template HTML de votre composant-->
-                            <button (click)="redirectToOtherPage()">Aller à la page sur localhost:4300</button>
-                             </li>
-                      </ul>
-                  </div>
-              </div>
-              <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
-                  <div class="footer-widget">
-                      <div class="footer-widget-heading">
-                          <h3>Subscribe</h3>
-                      </div>
-                      <div class="footer-text mb-25">
-                          <p>Don’t miss to subscribe to our new feeds, kindly fill the form below.</p>
-                      </div>
-                      <div class="subscribe-form">
-                          <form action="#">
-                              <input type="text" placeholder="Email Address">
-                              <button><i class="fab fa-telegram-plane"></i></button>
-                          </form>
-                      </div>
-                  </div>
-              </div>
+                Rendez-vouya est une plateforme innovante qui vous permet de trouver rapidement un médecin le plus
+                proche de chez vous et de prendre rendez-vous en ligne gratuitement.</p>
+            </div>
+            <div class="footer-social-icon">
+              <span>Suivez-nous</span>
+              <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
+              <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
+              <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
+            </div>
           </div>
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
+          <div class="footer-widget">
+            <div class="footer-widget-heading">
+              <h3>Liens utiles</h3>
+            </div>
+            <ul>
+              <li><a routerLink="">Home</a></li>
+              <li><a href="#">about</a></li>
+              <li><a href="#">services</a></li>
+              <li><a href="#">portfolio</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">About us</a></li>
+              <li><a href="#">Our Services</a></li>
+              <li><a href="#">Expert Team</a></li>
+              <li><a href="#">Contact us</a></li>
+
+
+            </ul>
+          </div>
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
+          <div class="footer-widget">
+            <div class="footer-widget-heading">
+              <h3>Pour les professionnels de santé</h3>
+            </div>
+            <div class="footer-text mb-25">
+              <p>Rendez-vouya est un service complet de gestion de cabinet médical, qui optimise votre organisation et
+                vous fait gagner du temps. Avec Rendez-vouya, vous partagez vos disponibilités en temps réel avec vos
+                patients selon vos critères, tout en gardant la main sur votre agenda médical.
+                Notre objectif final est d'améliorer l'accès aux soins en mettant à votre disposition des outils simples
+                et intuitifs pour que chacun devienne acteur de sa santé et de son bien-être.
+                DONC pour demander de inscrire dans notre plateforme clique sur
+              </p>
+              <div class="footer-widget">
+                <button class="custom-btn btn-5" [routerLink]="['/docdemande']"><span>Inscrire</span></button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
   </div>
   <div class="copyright-area">
-      <div class="container">
-          <div class="row">
-              <div class="col-xl-6 col-lg-6 text-center text-lg-left">
-                  <div class="copyright-text">
-                      <p>Copyright &copy; 2018, All Right Reserved <a href="https://codepen.io/anupkumar92/">Anup</a></p>
-                  </div>
-              </div>
-              <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
-                  <div class="footer-menu">
-                      <ul>
-                          <li><a href="#">Home</a></li>
-                          <li><a href="#">Terms</a></li>
-                          <li><a href="#">Privacy</a></li>
-                          <li><a href="#">Policy</a></li>
-                          <li><a href="#">Contact</a></li>
-                      </ul>
-                  </div>
-              </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-6 col-lg-6 text-center text-lg-left">
+          <div class="copyright-text">
+            <p>Copyright &copy; 2018, All Right Reserved <a href="https://codepen.io/anupkumar92/">Anup</a></p>
           </div>
+        </div>
+        <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
+          <div class="footer-menu">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Terms</a></li>
+              <li><a href="#">Privacy</a></li>
+              <li><a href="#">Policy</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
+    </div>
   </div>
 </footer>
