--- a/src/app/rendezvous-list/rendezvous-list.component.html
+++ b/src/app/rendezvous-list/rendezvous-list.component.html
@@ -36,8 +36,8 @@
           {{ rendezvous.statut }} <!-- Remplacez par la propriété correcte pour l'état -->
         </div>
         <div class="col-sm-12 col-lg-1 p-0">
-          <button class="btn btn-sm btn-success d-inline-block mr-1"><i class="fas fa-edit"></i></button>
-          <button class="btn btn-sm btn-danger d-inline-block"><i class="fas fa-trash-alt"></i></button>
+        &nbsp;&nbsp;&nbsp;
+          <button class="btn btn-sm btn-danger d-inline-block" (click)="deleteRendezvous(rendezvous.id)"><i class="fas fa-trash-alt"></i></button>
         </div>
       </div>
     </div>
