--- a/src/app/inboxrendezvous/inboxrendezvous.component.css
+++ b/src/app/inboxrendezvous/inboxrendezvous.component.css
@@ -15,6 +15,10 @@ button {
   position: relative;
   bottom: 1px;
 }
+a {
+position: relative;
+bottom: 1px;
+}
 @media screen and (max-width: 992px) {
   .le-hide {
     visibility: hidden;
