--- a/src/app/inboxrendezvous/inboxrendezvous.component.html
+++ b/src/app/inboxrendezvous/inboxrendezvous.component.html
@@ -13,11 +13,14 @@
         <div class="col-sm-12 col-lg-3 p-0 pl-lg-5">
           <strong>Date de rendez-vous</strong>
         </div>
-        <div class="col-sm-12 col-lg-3 p-0 pl-lg-5">
+        <!--<div class="col-sm-12 col-lg-3 p-0 pl-lg-5">
           <strong>num_telephone_patient</strong>
-        </div>
+        </div>-->
         <div class="col-sm-12 col-lg-3 p-0 pl-lg-5">
           <strong>État</strong>
+        </div>
+        <div class="col-sm-12 col-lg-3 p-0 pl-lg-5">
+          <strong>Email</strong>
         </div>
         <div class="col-sm-12 col-lg-1 p-0">
           <strong>action</strong>
@@ -35,13 +38,18 @@
           {{ rendezvous.date_heure }} <!-- Remplacez par la propriété correcte pour la date et l'heure -->
         </div>
         <div class="col-sm-12 col-lg-3 p-0 p-0 pl-lg-5">
-          {{ rendezvous.num_telephone_patient }} <!-- Remplacez par la propriété correcte pour le nom du patient -->
-        </div>
-        <div class="col-sm-12 col-lg-3 p-0 p-0 pl-lg-5">
           {{ rendezvous.statut }} <!-- Remplacez par la propriété correcte pour l'état -->
         </div>
+       <!-- <div class="col-sm-12 col-lg-3 p-0 p-0 pl-lg-5">
+          {{ rendezvous.num_telephone_patient }}  Remplacez par la propriété correcte pour le nom du patient
+        </div>-->
+        <div class="col-sm-12 col-lg-3 p-0 p-0 pl-lg-5">
+          {{ rendezvous.patient_email }} <!-- Remplacez par la propriété correcte pour l'état -->
+        </div>
+
+
         <div class="col-sm-12 col-lg-1 p-0">
-          <button class="btn btn-sm btn-success d-inline-block mr-1"><i class="fas fa-edit"></i>                </button>
+          <button class="btn btn-sm btn-success d-inline-block mr-1" (click)="getMailtoLink(rendezvous.patient_email)"><i class="fas fa-edit"></i></button>
           &nbsp;&nbsp;&nbsp;
           <button class="btn btn-sm btn-danger d-inline-block"
                   *ngIf="rendezvous.id !== undefined"
