--- a/src/app/inboxrendezvous/inboxrendezvous.component.html
+++ b/src/app/inboxrendezvous/inboxrendezvous.component.html
@@ -49,8 +49,9 @@
 
 
         <div class="col-sm-12 col-lg-1 p-0">
-          <button class="btn btn-sm btn-success d-inline-block mr-1" (click)="getMailtoLink(rendezvous.patient_email)"><i class="fas fa-edit"></i></button>
-          &nbsp;&nbsp;&nbsp;
+          <a class="btn btn-sm btn-success d-inline-block mr-1" [href]="getMailtoLink(rendezvous.patient_email)">
+            <i class="fas fa-thumbs-up"></i>
+          </a>&nbsp;&nbsp;&nbsp;
           <button class="btn btn-sm btn-danger d-inline-block"
                   *ngIf="rendezvous.id !== undefined"
                   (click)="deleteRendezvous(rendezvous.id!)">
